# kube-resource-updater

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  TEST_PLAN.md  artifacthub-repo.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: artifacthub-metadata.yml  ci.yml  release.yml
charts/kube-resource-updater/: .gitignore  .helmignore  Chart.yaml  README.md  values.yaml
charts/kube-resource-updater/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  cronjob.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  serviceaccount.yaml  validate.yaml
charts/kube-resource-updater/templates/webhook/: crd.yaml  deployment.yaml  mutatingwebhookconfiguration.yaml  pdb.yaml  prometheusrule.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  (+1 more)
docs/: config-interactions-audit-v2.md  config-interactions-audit.md  planned-features.md  reference.md  webhook-migration.md
examples/: argocd-application.yaml  opt-in-namespace.yaml
src/: config.py  discovery.py  git_provider.py  k8s.py  log.py  overrides.py  prometheus.py  webhook_cache.py  webhook_cert.py  webhook_patch.py  webhook_rollout.py  webhook_server.py  webhook_status.py  webhook_validate.py  workload.py  writeback.py  writeback_webhook.py
tests/: test_qa_suite.py
tools/: qa_params.py  test_overrides.py
tools/test-cluster/: _lib.sh
tools/test-cluster/scenarios/: A-bare-opt-in.sh  G-hierarchy.sh
